coil gui seems to be functioning with dummy hardware, but needs testing on real hardware

--- a/notebooks/pykeithley.ipynb
+++ b/notebooks/pykeithley.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +128,7 @@
     "    inst.write(s)\n",
     "    return s\n",
     "\n",
+    "\n",
     "def fieldtocurrent(B, phi, theta, fieldcoeffs, lower, upper):\n",
     "    \"Converts the Bnorm, phi, and theta input values into x, y, z, current values using calibration parameters in fieldcoeffs\"\n",
     "    x, errx = calibbfieldtocurr(fieldcoeffs['X'], B * np.sin(theta)* np.cos(phi), lower, upper)\n",
@@ -136,6 +137,7 @@
     "    if errx==erry==errz==None: return x,y,z, None\n",
     "    else: return x,y,z, [errx, erry, errz]\n",
     "\n",
+    "\n",
     "def calibbfieldtocurr(fieldcoeffs, x, lower, upper):\n",
     "    \"Calibrates the field to current conversion using parameters in fieldcoeffs\"\n",
     "    y = (x - fieldcoeffs[1])/fieldcoeffs[0]\n",
@@ -143,6 +145,7 @@
     "        return y, None\n",
     "    elif y>upper: return upper, \"Current clipped to \" + str(upper) + \"A\"\n",
     "    elif y<lower: return lower, \"Current clipped to \" + str(lower) + \"A\"\n",
+    "\n",
     "\n",
     "def setpolarity(x,y,z):\n",
     "    \"Determines the 3-bit polarity string to send to the Arduino Relay. 0 for positive polarity, 1 for negative polarity\"\n",
@@ -174,6 +177,7 @@
     "    theta = np.acos(z/bnorm)\n",
     "    return bnorm, phi, theta\n",
     "\n",
+    "\n",
     "def calibcurrtobfield(fieldcoeffs, x):\n",
     "    \"Calibrates the current to field conversion using parameters in fieldcoeffs\"\n",
     "    return (x * fieldcoeffs[0]) + fieldcoeffs[1]\n",
@@ -198,6 +202,7 @@
     "    arduino.flush()\n",
     "    return d\n",
     "\n",
+    "\n",
     "def getbfieldpol():\n",
     "    \"Reads the field polarities from the Arduino relay\"\n",
     "    settings = 'get \\n'\n",
@@ -219,6 +224,7 @@
     "    arduino.sendBreak()\n",
     "    arduino.flush()    \n",
     "    return output, d1\n",
+    "\n",
     "\n",
     "def setfield(bnorm, phi, theta, magneton):\n",
     "    if magneton == True:\n",
@@ -333,12 +339,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def convertpols(pols):\n",
+    "    d = int(pols)\n",
+    "    op1 = np.floor(d/100)\n",
+    "    print(op1)\n",
+    "    if op1 == 0: x = 1\n",
+    "    else: x = -1\n",
+    "    op2 = np.remainder(d, 100)\n",
+    "    op2 = np.floor(op2/10)\n",
+    "    print(op2)\n",
+    "    if np.floor(op2) == 0: y = 1\n",
+    "    else: y = -1\n",
+    "    op3 = np.remainder(d,10)\n",
+    "    print(op3)\n",
+    "    if np.floor(op3) == 0: z = 1\n",
+    "    else: z = -1\n",
+    "    print(x,y,z)\n",
+    "    return x, y, z\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "2.0\n",
+      "1\n",
+      "1 -1 -1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1, -1, -1)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "convertpols(\"011\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = 101\n",
+    "op1= np.divmod(d, 100)\n",
+    "op2 = np.divmod(d, 10)\n",
+    "op3 = np.divmod(d, 1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(np.int64(1), np.int64(1)) (np.int64(10), np.int64(1)) (np.int64(101), np.int64(0))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(op1, op2, op3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "keithleycontrol",
+   "display_name": "scannv",
    "language": "python",
    "name": "python3"
   },
@@ -352,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
