working helmholtz coil gui, started on laser gui

--- a/notebooks/pykeithley.ipynb
+++ b/notebooks/pykeithley.ipynb
@@ -11,12 +11,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "arduinoport = \"COM4\"\n",
-    "keithleyname = \"ASRL3::INSTR\""
+    "keithleyname = \"ASRL5::INSTR\""
    ]
   },
   {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,33 +38,31 @@
     "import math as np\n",
     "import pyvisa as visa\n",
     "# visa.log_to_screen()\n",
-    "rm = visa.ResourceManager()\n"
+    "rm = visa.ResourceManager()\n",
+    "import pyfirmata\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Arduino relay initialized\n",
+      "Keithley instruments, 2231A-30-3, 802196010727610334, 1.04-1.04\n",
+      "\n",
       "Keithley Initialized\n"
      ]
     }
    ],
    "source": [
     "def initializerelay(port):\n",
-    "    try:\n",
-    "        arduino = serial.Serial(port=port, baudrate=9600, timeout=3) \n",
-    "        arduino.flush()\n",
-    "        print(\"Arduino relay initialized\")\n",
-    "        return arduino\n",
-    "    except:\n",
-    "        return print(\"Already initialized\")\n",
-    "\n",
+    "    board = pyfirmata.Arduino(port)\n",
+    "    it = pyfirmata.util.Iterator(board)\n",
+    "    it.start()\n",
+    "    return board\n",
     "arduino = initializerelay(arduinoport)\n",
     "\n",
     "\n",
@@ -73,7 +71,7 @@
     "    keithley = rm.open_resource(port)\n",
     "    keithley.read_terloweration = \"\\n\"\n",
     "    keithley.write_termination = '\\n'\n",
-    "    keithley.query(\"*IDN?\")\n",
+    "    print(keithley.query(\"*IDN?\"))\n",
     "    keithley.write(\"SYST:REM\")\n",
     "    keithley.write(\"OUTP:STAT:ALL OFF\")\n",
     "    keithley.write('APP:VOLT 3.000000,3.000000,3.000000')\n",
@@ -92,6 +90,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keithley.close()\n",
+    "arduino.exit()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -100,28 +108,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "###Keithley controls\n",
-    "def querychannel(inst, channel): ##inst is almost always going to be Keithley\n",
-    "    \"Returns a dictionary, dat, with the channel number, current set, and voltage set off the current source\"\n",
-    "    inst.write(\"INST:NSEL \" + str(channel))\n",
+    "def querychannel(channel, type):\n",
+    "    keithley.write(\"INST:NSEL \" + str(channel))\n",
     "    dat = {}\n",
-    "    dat['channel'] = inst.query(\"INST?\")\n",
-    "    dat['current'] = inst.query(\"MEAS:CURR?\")\n",
-    "    dat['voltage'] = inst.query(\"MEAS:VOLT?\")\n",
+    "    if type == \"ALL\":\n",
+    "        dat['channel'] = keithley.query(\"INST?\")\n",
+    "        dat['CURR'] = keithley.query(\"MEAS:CURR?\")\n",
+    "        dat['VOLT'] = keithley.query(\"MEAS:VOLT?\")\n",
+    "    else: \n",
+    "        dat['channel'] = keithley.query(\"INST?\")\n",
+    "        dat[type] = keithley.query(\"MEAS:\" + type + \"?\")\n",
     "    return dat\n",
+    "    \n",
+    "# def write3channels(TYPE, x, y, z):\n",
+    "#     \"Writes the TYPE (CURR or VOLT) to all three channels x, y, z on the current source\"\n",
+    "#     s = \"APP:\" + TYPE + \" \" + str(abs(x)) + \",\"+str(abs(y))+\",\" + str(abs(z))\n",
+    "#     keithley.write(s)\n",
+    "#     return s\n",
     "\n",
-    "def query3channels(inst):\n",
-    "    \"Returns a dictionary of the current and voltage set on all three x,y,z channels off the current source\"\n",
+    "\n",
+    "def query3channels(type):\n",
     "    dat = {}\n",
-    "    dat[\"X\"] = querychannel(inst, 1)\n",
-    "    dat[\"Y\"] = querychannel(inst, 2)\n",
-    "    dat[\"Z\"] = querychannel(inst, 3)\n",
+    "    dat[\"X\"] = querychannel(1, type)\n",
+    "    dat[\"Y\"] = querychannel(2, type)\n",
+    "    dat[\"Z\"] = querychannel(3, type)\n",
     "    return dat\n",
-    "\n",
     "def write3channels(inst, TYPE, x, y, z):\n",
     "    \"Writes the TYPE (CURR or VOLT) to all three channels x, y, z on the current source\"\n",
     "    s = \"APP:\" + TYPE + \" \" + str(abs(x)) + \",\"+str(abs(y))+\",\" + str(abs(z))\n",
@@ -159,6 +175,7 @@
     "    if abs(z) == z: pols.append(0)\n",
     "    else: pols.append(1)\n",
     "    pols = \"\".join(str(pol) for pol in pols)\n",
+    "    print(pols)\n",
     "    setbfieldpol(pols)\n",
     "    output, d = getbfieldpol()\n",
     "\n",
@@ -209,21 +226,22 @@
     "    arduino.write(bytes(settings, 'utf-8'))\n",
     "    time.sleep(.1)\n",
     "    output = {}\n",
-    "    d1 = arduino.readline()\n",
-    "    d = int(d1)\n",
-    "    op1 = np.floor(d/100)\n",
-    "    if op1 == 0: output['op1'] = 'out'\n",
-    "    else: output['op1'] = 'in'\n",
-    "    op2 = np.remainder(d, 100)\n",
-    "    if np.floor(op2) == 0: output['op2'] = 'out'\n",
-    "    else: output['op2'] = 'in'\n",
-    "    op3 = np.remainder(d,10)\n",
-    "    if np.floor(op3) == 0: output['op3'] = 'out'\n",
-    "    else: output['op3'] = 'in'\n",
+    "    pols = arduino.readline()\n",
+    "    print(pols)\n",
+    "    \n",
+    "\n",
+    "    if pols[0] == \"0\": x = 1\n",
+    "    else: x = -1\n",
+    "    if pols[1] == \"0\": y = 1\n",
+    "    else: y = -1\n",
+    "    if pols[2] == \"0\": z = 1\n",
+    "    else: z = -1\n",
+    "    print(x,y,z)\n",
+    "\n",
     "    arduino.flush()\n",
     "    arduino.sendBreak()\n",
     "    arduino.flush()    \n",
-    "    return output, d1\n",
+    "    return output, pols\n",
     "\n",
     "\n",
     "def setfield(bnorm, phi, theta, magneton):\n",
@@ -247,6 +265,7 @@
     "\n",
     "    bnormf, phif, thetaf = currenttofield(fieldcoeffs, xf, yf, zf) ##Convert read values to field values\n",
     "    print(\"Field set. Magnetic field readings:\")\n",
+    "    \n",
     "    print(\"Set Bnorm\", bnorm, \"\\t\", \"Read Bnorm\", bnormf)\n",
     "    print(\"Set phi\", phi, \"\\t\", \"Read phi\", phif)\n",
     "    print(\"Set theta\", theta, \"\\t\", \"Read theta\", thetaf)\n"
@@ -272,6 +291,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arduino.write(bytes(\"set 111\", \"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arduino.readline()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -288,13 +325,21 @@
      "output_type": "stream",
      "text": [
       "Any clipped currents?  None\n",
-      "String sent to Arduino relay and string read from Arduino:  b'000\\n' 000\n",
-      "String sent to kethiley:  APP:CURR 0.29202237051141416,0.13864808477722215,0.010248449701749988\n",
-      "Final readings from Keithley:  {'X': {'channel': 'CH1\\n', 'current': '0.287509\\n', 'voltage': '2.8496\\n'}, 'Y': {'channel': 'CH2\\n', 'current': '0.138079\\n', 'voltage': '1.40359\\n'}, 'Z': {'channel': 'CH3\\n', 'current': '0.0087554\\n', 'voltage': '0.00632672\\n'}}\n",
-      "Field set. Magnetic field readings:\n",
-      "Set Bnorm 0.5 \t Read Bnorm 0.49450139085380435\n",
-      "Set phi 0.7 \t Read phi 0.7061713089257263\n",
-      "Set theta 1.57 \t Read theta 1.5737482801140206\n"
+      "000\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Arduino' object has no attribute 'write'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43msetfield\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbnorm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mphi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtheta\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmagneton\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[7], line 140\u001b[0m, in \u001b[0;36msetfield\u001b[1;34m(bnorm, phi, theta, magneton)\u001b[0m\n\u001b[0;32m    137\u001b[0m x,y,z, errs \u001b[38;5;241m=\u001b[39m fieldtocurrent(bnorm, phi, theta, fieldcoeffs, \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m3.\u001b[39m, \u001b[38;5;241m3.\u001b[39m) \u001b[38;5;66;03m## Step 1 Convert input B field values to current values\u001b[39;00m\n\u001b[0;32m    138\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAny clipped currents? \u001b[39m\u001b[38;5;124m\"\u001b[39m, errs)\n\u001b[1;32m--> 140\u001b[0m d,pols \u001b[38;5;241m=\u001b[39m \u001b[43msetpolarity\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43mz\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m##Step 2 set the Arduino relay polarities\u001b[39;00m\n\u001b[0;32m    141\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mString sent to Arduino relay and string read from Arduino: \u001b[39m\u001b[38;5;124m\"\u001b[39m, d, pols) \u001b[38;5;66;03m###d and pols should be the same (pols is what you're trying to set, d is what is read out)\u001b[39;00m\n\u001b[0;32m    144\u001b[0m s \u001b[38;5;241m=\u001b[39m write3channels(keithley, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCURR\u001b[39m\u001b[38;5;124m\"\u001b[39m, x,y,z) \u001b[38;5;66;03m##Step 3 sets the current (using absolute values since this is setting to the Keithley and the Arduino will deal with the polarities)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[7], line 65\u001b[0m, in \u001b[0;36msetpolarity\u001b[1;34m(x, y, z)\u001b[0m\n\u001b[0;32m     63\u001b[0m pols \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mstr\u001b[39m(pol) \u001b[38;5;28;01mfor\u001b[39;00m pol \u001b[38;5;129;01min\u001b[39;00m pols)\n\u001b[0;32m     64\u001b[0m \u001b[38;5;28mprint\u001b[39m(pols)\n\u001b[1;32m---> 65\u001b[0m \u001b[43msetbfieldpol\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpols\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     66\u001b[0m output, d \u001b[38;5;241m=\u001b[39m getbfieldpol()\n\u001b[0;32m     68\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m d, pols\n",
+      "Cell \u001b[1;32mIn[7], line 100\u001b[0m, in \u001b[0;36msetbfieldpol\u001b[1;34m(pols)\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWrites the polarity to the Arduino relay. Must be a 3-bit string made of 0s and 1s\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     99\u001b[0m settings \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mset \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m pols \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m--> 100\u001b[0m \u001b[43marduino\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite\u001b[49m(\u001b[38;5;28mbytes\u001b[39m(settings, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m    101\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m.1\u001b[39m)\n\u001b[0;32m    102\u001b[0m d \u001b[38;5;241m=\u001b[39m arduino\u001b[38;5;241m.\u001b[39mreadline()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Arduino' object has no attribute 'write'"
      ]
     }
    ],
@@ -303,35 +348,50 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### TURN OFF KEITHLEY OUTPUTS AFTER MEASUREMENTS"
+    "keithley.write(\"OUTP:STAT:ALL ON\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Any clipped currents?  None\n",
-      "String sent to Arduino relay and string read from Arduino:  b'010\\n' 010\n",
-      "String sent to kethiley:  APP:CURR 0.012744354862267403,0.012148357950422508,0.009928477864300811\n",
-      "Final readings from Keithley:  {'X': {'channel': 'CH1\\n', 'current': '0.0173969\\n', 'voltage': '0.139456\\n'}, 'Y': {'channel': 'CH2\\n', 'current': '0.0119476\\n', 'voltage': '0.164484\\n'}, 'Z': {'channel': 'CH3\\n', 'current': '0.0087554\\n', 'voltage': '0.00549425\\n'}}\n",
-      "Field set. Magnetic field readings:\n",
-      "Set Bnorm 0 \t Read Bnorm 0.051883491951908944\n",
-      "Set phi 0 \t Read phi 1.447645702261774\n",
-      "Set theta 0 \t Read theta 1.5989350564636895\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'0.00459881\\n'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "setfield(0,0,0, True)\n",
-    "# keithleyoff()"
+    "keithley.query(\"MEAS:CURR?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TURN OFF KEITHLEY OUTPUTS AFTER MEASUREMENTS"
    ]
   },
   {
@@ -362,37 +422,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0\n",
-      "2.0\n",
-      "1\n",
-      "1 -1 -1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(1, -1, -1)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "convertpols(\"011\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,19 +443,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(op1, op2, op3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyfirmata\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board = pyfirmata.Arduino(\"COM4\")\n",
+    "it = pyfirmata.util.Iterator(board)\n",
+    "it.start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def controlrelay(input):\n",
+    "    s = input.split()\n",
+    "    mode = s[0]\n",
+    "    arg = s[1]\n",
+    "    if mode == \"set\":\n",
+    "        setrelay(arg)\n",
+    "        read = getrelay()\n",
+    "    else: \n",
+    "        read = getrelay\n",
+    "    \n",
+    "    return mode, arg, read\n",
+    "\n",
+    "def polarizationflip(pol, channel1, channel2):\n",
+    "    if pol==\"1\":\n",
+    "        board.digital[channel1].write(1)\n",
+    "        board.digital[channel2].write(1)\n",
+    "    else: \n",
+    "        board.digital[channel1].write(0)\n",
+    "        board.digital[channel2].write(0)\n",
+    "\n",
+    "def setrelay(pols):\n",
+    "    polarizationflip(pols[0], 7, 8)\n",
+    "    polarizationflip(pols[1], 9, 10)\n",
+    "    polarizationflip(pols[2], 11, 12)\n",
+    "\n",
+    "\n",
+    "def getrelay():\n",
+    "    pins = [7,8,9,10,11,12]\n",
+    "    read = []\n",
+    "    for i in pins:\n",
+    "        read.append(board.digital[i].read())\n",
+    "    return read"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "board.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(np.int64(1), np.int64(1)) (np.int64(10), np.int64(1)) (np.int64(101), np.int64(0))\n"
-     ]
+     "data": {
+      "text/plain": [
+       "('set', '111', [1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(op1, op2, op3)"
+    "controlrelay(\"set 111\")"
    ]
   },
   {
@@ -429,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scannv",
+   "display_name": "keithleycontrol",
    "language": "python",
    "name": "python3"
   },
@@ -443,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
