--- a/notebooks/counterdaq.ipynb
+++ b/notebooks/counterdaq.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6a3f0e2c",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ab99b03f",
    "metadata": {},
    "outputs": [],
@@ -33,22 +33,22 @@
     "pfi_port = \"PFI1\"\n",
     "\n",
     "params = {\n",
-    "    sampling_rate : 100000,\n",
-    "    acq_time : 100, ###in ms\n",
-    "    number_samples : 100 * acq_time,\n",
-    "    clock_port : \"Dev3/port0\",\n",
-    "    count_dev : \"Dev3/\",\n",
-    "    count_port : \"ctr0\",\n",
-    "    edge_type : Edge.RISING,\n",
-    "    trig_edge_type : Edge.RISING,\n",
-    "    trig_type : TriggerType.DIGITAL_EDGE,\n",
-    "    pfi_port : \"PFI1\"\n",
+    "    'sampling_rate' : 100000,\n",
+    "    'acq_time' : 100, ###in ms\n",
+    "    'number_samples' : 100 * acq_time,\n",
+    "    'clock_port' : \"Dev3/port0\",\n",
+    "    'count_dev' : \"Dev3/\",\n",
+    "    'count_port' : \"ctr0\",\n",
+    "    'edge_type' : Edge.RISING,\n",
+    "    'trig_edge_type' : Edge.RISING,\n",
+    "    'trig_type' : TriggerType.DIGITAL_EDGE,\n",
+    "    'pfi_port' : \"PFI1\"\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "845e5a22",
    "metadata": {},
    "outputs": [],
@@ -119,19 +119,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5a7d58f3",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'get_countrate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mget_countrate\u001b[49m(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'get_countrate' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
      ]
     }
    ],
@@ -142,10 +138,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "6f802cf7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Scanltmaster\\scannvcamqudi\\.venv\\lib\\site-packages\\nidaqmx\\task\\_task.py:102: DaqResourceWarning: Task of name \"_unnamedTask<0>\" was not explicitly closed before it was destructed. Resources on the task device may still be reserved.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'read_task' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m stop_counter(\u001b[43mread_task\u001b[49m, clock_task)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'read_task' is not defined"
+     ]
+    }
+   ],
    "source": [
     "stop_counter(read_task, clock_task)"
    ]
@@ -163,7 +179,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "scannv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
